# rules_ostest

./: .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  SECURITY.md  THIRD_PARTY.md
.github/workflows/: ci.yml
docs/: BUILD.bazel  README.md  debugging-uefi-tests.md  getting-started.md  osdev-uefi-use-cases.md  testing-platforms-and-composition.md
ostest/: BUILD.bazel  defs.bzl  images.bzl  platforms.bzl
ostest/private/: BUILD.bazel  fat_image.py  gpt_image.py  iso_image.py  managed_network.py  mbr_image.py  qemu_runner_support.py  qemu_test_runner.py  raw_image.py
ostest/python/: BUILD.bazel  lab.py  network.py  qemu.py
tests/: BUILD.bazel  fake_advanced_qemu.py  fake_failure_hook.py  fake_host_companion.py  fake_qemu.py  fake_qmp_qemu.py  image_layout_test.py  managed_network_test.py  qemu_config_feature_test.py  qemu_lab_test.py  qemu_runner_failure_hook_integration_test.py  qemu_runner_support_test.py  qemu_runtime_lock_test.py  qemu_session_test.py
tests/consumer/: .bazelrc  BUILD.bazel  MODULE.bazel  payload.txt
tests/image_matrix/: BUILD.bazel  image_matrix_test.py
tests/image_matrix/fixtures/: bytes.txt  first.txt  kib.txt  mib.txt  partition-one.txt  partition-two.txt  second.txt  sectors.txt
tests/integration/: BUILD.bazel  cirros_meta_data.json  cirros_shutdown_user_data.sh  cirros_ssh_probe.py  cirros_user_data.sh  efi_shell_fixture.txt  efi_shell_scripted_startup.nsh  efi_shell_startup.nsh  qemu_noble.lock.json  qemu_noble.yaml  qemu_runtime_repository.bzl  qemu_system_aarch64.py  qemu_system_x86_64.py  real_cirros_scripted_test.py  real_cirros_shutdown_test.py  real_qemu_scripted_test.py  serial_pass_uefi.c  stage_runtime.sh
tests/integration/lab_matrix/: BUILD.bazel  client_meta_data.json  client_user_data.sh  lab_test.bzl  qemu_system_x86_64_tcg.py  real_cirros_lab_test.py  server_meta_data.json  server_user_data.sh
tests/integration/media_matrix/: BUILD.bazel  README.md  cd_sentinel.txt  meta_data.json  nvme_sentinel.txt  shell_nvme_readonly.nsh  shell_startup.nsh  shell_usb_readonly.nsh  usb_sentinel.txt  user_data.sh
tests/runner_negative/: BUILD.bazel  defs.bzl  dummy.fd  fake_companion.py  fake_qemu.py  runner_meta_test.py
tests/testdata/: config.txt  dummy.efi
tools/: update_qemu_runtime_lock.sh
