load("@rules_python//python:py_binary.bzl", "py_binary")
load(
    "//ostest:defs.bzl",
    "qemu_media",
    "uefi_disk_image",
    "uefi_esp_image",
    "uefi_test",
)

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "efi_shell_x64",
    srcs = glob(
        ["runtime/shellx64.efi*"],
        allow_empty = True,
    ),
)

uefi_esp_image(
    name = "real_qemu_shell_esp",
    arch = "x86_64",
    efi_binary = ":efi_shell_x64",
    files = {
        "efi_shell_startup.nsh": "EFI/BOOT/startup.nsh",
        "efi_shell_fixture.txt": "EFI/OSTEST/fixture.txt",
    },
    size_mb = 64,
    tags = [
        "manual",
        "no-remote",
    ],
    volume_label = "OSTEST",
)

uefi_disk_image(
    name = "real_qemu_shell_disk",
    disk_guid = "6cf7f43a-9233-4a8e-94bc-a403df9d9237",
    esp = ":real_qemu_shell_esp",
    partition_guid = "91a1cc59-6747-48d8-a87f-67a2f1eb0a81",
    size_mb = 96,
    tags = [
        "manual",
        "no-remote",
    ],
)

filegroup(
    name = "ovmf_code",
    srcs = glob(
        ["runtime/OVMF_CODE_4M.fd*"],
        allow_empty = True,
    ),
)

filegroup(
    name = "ovmf_vars",
    srcs = glob(
        ["runtime/OVMF_VARS_4M.fd*"],
        allow_empty = True,
    ),
)

py_binary(
    name = "qemu_system_x86_64",
    srcs = ["qemu_system_x86_64.py"],
    data = glob(
        [
            "runtime/PACKAGES.txt*",
            "runtime/licenses/**",
            "runtime/root/**",
        ],
        allow_empty = True,
    ),
    legacy_create_init = 0,
    main = "qemu_system_x86_64.py",
    python_version = "3.12",
)

uefi_test(
    name = "real_qemu_efi_shell_test",
    size = "small",
    arch = "x86_64",
    debugcon = True,
    export_firmware_vars = True,
    firmware = ":ovmf_code",
    firmware_vars = ":ovmf_vars",
    forbidden_markers = ["OSTEST: FAIL"],
    graphics = True,
    media = [qemu_media(
        name = "shell_state",
        bootindex = 1,
        export = True,
        image = ":real_qemu_shell_disk",
        readonly = False,
        snapshot = False,
    )],
    memory_mb = 128,
    phases = [
        {
            "markers": [
                "OSTEST: EFI SHELL",
                "OSTEST: PHASE ONE WRITE",
            ],
            "then": "reboot",
        },
        {
            "markers": [
                "OSTEST: PHASE TWO READ",
                "OSTEST: PASS",
            ],
        },
    ],
    qemu = ":qemu_system_x86_64",
    screendump_not_blank = True,
    tags = [
        "external",
        "manual",
        "no-remote",
    ],
    timeout_seconds = 30,
)
